<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/listSettings_TitleEditText"
            android:hint="@string/title_hint"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSetting_ItemNameEditText"
            android:hint="@string/add_item_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_TitleEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/listSettings_NotesEditText"
            android:hint="@string/add_note_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listSetting_ItemNameEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSettings_AddItemButton"
            android:text="@string/add_item_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_NotesEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSettings_GroupNameEditText"
            android:hint="@string/add_group_hint"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_AddItemButton"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <Button
            android:text="@string/add_group_of_items_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSettings_AddGroupButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_GroupNameEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <CheckBox
            android:text="@string/set_alert_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSettings_SetAlertCheckBox"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_AddGroupButton"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />

        <Button
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listSettings_SaveButton"
            app:layout_constraintTop_toBottomOf="@+id/listSettings_SetAlertCheckBox"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
