<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unmute.shoppinglistapp.AddItemGroupActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/group_NameOfGroupEditText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:hint="@string/group_name_hint" />

    <ListView
        android:layout_width="316dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/group_AddItemEditText"
        android:id="@+id/group_ItemListVIew"
        app:layout_constraintBottom_toTopOf="@+id/group_SaveButton"
        android:layout_marginBottom="16dp" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_AddItemEditText"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/group_NameOfGroupEditText"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:hint="@string/group_add_item_hint" />

    <Button
        android:text="@string/group_add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_AddItemButton"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/group_AddItemEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/group_ItemListVIew"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/group_save_group_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/group_SaveButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.85" />

</android.support.constraint.ConstraintLayout>
