<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.unmute.shoppinglistapp.MainActivity">

    <android.support.v7.widget.Toolbar android:theme="@style/Theme.AppCompat.Light"
        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        android:layout_height="56dp"
        android:layout_width="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/toolbar_main"
        android:gravity="center_vertical" />

    <Button
        android:text="@string/main_create_lists"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/main_CreateNewButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_Guideline40Horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <Button
        android:text="@string/main_view_lists"
        android:id="@+id/main_ViewListsButton"
        app:layout_constraintTop_toTopOf="@+id/main_Guideline40Horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/main_Guideline70Horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:id="@+id/main_Guideline40Horizontal"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="231dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.4074074" />

    <android.support.constraint.Guideline
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:id="@+id/main_Guideline70Horizontal"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="401dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintGuide_percent="0.70723104" />

    <Button
        android:text="@string/main_manage_item_groups"
        android:layout_height="0dp"
        android:id="@+id/main_AddItemGroupsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        app:layout_constraintRight_toLeftOf="@+id/main_Guideline50Vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/main_ViewListsButton" />

    <Button
        android:text="@string/main_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/main_SettingsButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_AddItemGroupsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_ViewListsButton" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_Guideline50Vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>
